--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "hbs": "^4.2.0",
     "http": "^0.0.1-security",
     "jquery": "^3.6.4",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "moongoose": "^0.0.5",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "puppeteer": "^19.7.2",
