--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "moongoose": "^0.0.5",
+    "netlify-cli": "^15.6.0",
+    "netlify-lambda": "^2.0.16",
     "newsapi": "^2.4.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "puppeteer": "^19.7.2",
     "request": "^2.88.2",
+    "serverless-http": "^3.2.0",
     "validator": "^13.9.0"
   },
   "description": ""
