--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "git": "^0.1.5",
     "hbs": "^4.2.0",
     "http": "^0.0.1-security",
+    "http-proxy-agent": "^7.0.0",
+    "https-proxy-agent": "^7.0.0",
     "jquery": "^3.6.4",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.0",
@@ -29,12 +31,15 @@
     "netlify-cli": "^15.6.0",
     "netlify-lambda": "^2.0.16",
     "newsapi": "^2.4.1",
+    "node-cookie-proxy-agent": "^1.1.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "puppeteer": "^19.11.1",
     "request": "^2.88.2",
     "serverless-http": "^3.2.0",
+    "socks-proxy-agent": "^8.0.1",
+    "tough-cookie": "^4.1.3",
     "validator": "^13.9.0"
   },
   "description": ""
