--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "serverless-http": "^3.2.0",
     "socks-proxy-agent": "^8.0.1",
     "tough-cookie": "^4.1.3",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   },
   "description": ""
