--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 SECRET_KEY=just_a_random_secret_key_making_sure_its_more_than_32bits
 AUTH_EMAIL= 2kwattz@gmail.com
 AUTH_PASSWORD= ymfanauwsxdgfhfp
+LOCAL_CONN= mongodb://localhost:27017/carrierpilot
+ATLAS_CONN = mongodb+srv://${process.env.USERNAME}:${process.env.PASSWORD}@cluster0.vmilsjg.mongodb.net/?retryWrites=true&w=majority
+ 
 
