Microsoft Scrapper troubleshooted, Job2 UI Created

--- a/.env
+++ b/.env
@@ -3,5 +3,8 @@ AUTH_EMAIL= 2kwattz@gmail.com
 AUTH_PASSWORD= ymfanauwsxdgfhfp
 LOCAL_CONN= mongodb://localhost:27017/carrierpilot
 ATLAS_CONN = mongodb+srv://${process.env.USERNAME}:${process.env.PASSWORD}@cluster0.vmilsjg.mongodb.net/?retryWrites=true&w=majority
+TEMP_API_KEY = 5f0580b2537d3b20801d45e74d8f10b6
+
+
  
 
