--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mailgun-js": "^0.22.0",
     "mongoose": "^7.0.4",
     "moongoose": "^0.0.1",
+    "multer": "^1.4.5-lts.1",
     "netlify-cli": "^15.6.0",
     "netlify-lambda": "^2.0.16",
     "newsapi": "^2.4.1",
